--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,53 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/gridShimmer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:shimmer_duration="800">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/rv_item_grid_photo_shimmer"/>
+                    <include layout="@layout/rv_item_grid_photo_shimmer"/>
+                    <include layout="@layout/rv_item_grid_photo_shimmer"/>
+                    <include layout="@layout/rv_item_grid_photo_shimmer"/>
+                    <include layout="@layout/rv_item_grid_photo_shimmer"/>
+                    <include layout="@layout/rv_item_grid_photo_shimmer"/>
+                    <include layout="@layout/rv_item_grid_photo_shimmer"/>
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/listShimmer"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:shimmer_duration="800">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/rv_item_list_photo_shimmer"/>
+                    <include layout="@layout/rv_item_list_photo_shimmer"/>
+                    <include layout="@layout/rv_item_list_photo_shimmer"/>
+                    <include layout="@layout/rv_item_list_photo_shimmer"/>
+                    <include layout="@layout/rv_item_list_photo_shimmer"/>
+                    <include layout="@layout/rv_item_list_photo_shimmer"/>
+                    <include layout="@layout/rv_item_list_photo_shimmer"/>
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvPhotos"
                 android:layout_marginTop="20dp"
