--- a/app/src/main/res/drawable/gradient_black_bottom.xml
+++ b/app/src/main/res/drawable/gradient_black_bottom.xml
@@ -3,7 +3,7 @@
 
     <gradient
             android:angle="90"
-            android:endColor="@color/transparant"
+            android:endColor="@color/transparent"
             android:startColor="#000000"
             android:type="linear" />
 
