--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="transparant">#00FFFFFF</color>
+    <color name="transparent">#00FFFFFF</color>
     <color name="darkGrey">#FF7C7C7C</color>
     <color name="grey">#C4C4C4</color>
 </resources>
